Add package lock files for DemoRnWin.Package and DemoRnWin
- Created packages.lock.json for DemoRnWin.Package with dependencies including Microsoft.WindowsAppSDK, boost, Microsoft.ReactNative, and others.
- Created packages.lock.json for DemoRnWin with dependencies including Microsoft.WindowsAppSDK, Microsoft.ReactNative, and Microsoft.Web.WebView2.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DemoRnWin",
+  "name": "@effect-native/demo-rn-win",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -47,5 +47,6 @@
       "namespace": "DemoRnWin",
       "template": "cpp-app"
     }
-  }
+  },
+  "packageManager": "pnpm@10.17.1"
 }
