--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,9 @@ yarn-error.log
 !.yarn/sdks
 !.yarn/versions
 nul
+# Local tooling scratch files
+patch-healthchecks.js
+patch.js
+test-execa.js
+test.js
+tmp.txt
